--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CoronaTracker</string>
+    <string name="home_text">Home</string>
+    <string name="discover_text">Discover</string>
 </resources>
