--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="global_results">Global Results</string>
+    <string name="total_cases">Total Cases</string>
+    <string name="today">Today</string>
+    <string name="total_deaths">Total Deaths</string>
+    <string name="today_deaths">Today Deaths</string>
+    <string name="recovered">Recovered</string>
+    <string name="active_cases">Active Cases</string>
 </resources>
